--- a/app/styles/modules/_m-search.scss
+++ b/app/styles/modules/_m-search.scss
@@ -10,7 +10,7 @@
   z-index: 2;
 
   @include breakpoint(large) {
-    padding-right: rem-calc(9);
+    padding-right: rem-calc(38);
   }
 
   input {
@@ -19,6 +19,9 @@
 
   .close-button {
     margin-top: rem-calc(2);
+    @include breakpoint(large) {
+      right: rem-calc(48);
+    }
   }
 }
 
@@ -91,4 +94,8 @@
   bottom: auto;
   left: 0;
   box-shadow: 0 2px 0 rgba(0,0,0,0.1);
+
+  @include breakpoint(large) {
+    max-width: 400px;
+  }
 }
